ajout du login component et debut de la modif header

--- a/frontend/haelya-front/src/app/shared/components/header/header.component.html
+++ b/frontend/haelya-front/src/app/shared/components/header/header.component.html
@@ -30,7 +30,7 @@
                             </form>
                         </div>
 
-                        <a href="#" class="user-account for-buy"><i class="icon icon-user"></i><span>Account</span></a>
+                        <a routerLink="/login" class="user-account for-buy"><i class="icon icon-user"></i><span>Se connecter</span></a>
                         <a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart:(0 $)</span></a>
 
 
