mise à jour du carousel

--- a/frontend/haelya-front/src/app/pages/home/home.component.html
+++ b/frontend/haelya-front/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
                     <h2 class="section-title">Featured Books</h2>
                 </div>
 
-                <div class="product-list" data-aos="fade-up">
+                <div class="product-list" >
                     <div class="row">
 
                         <div class="col-md-3">
@@ -558,8 +558,7 @@
         </div>
     </div>
 </section>
-
-
+<!--  
 <section id="special-offer" class="bookshelf pb-5 mb-5">
 
     <div class="section-header align-center">
@@ -572,7 +571,7 @@
     <div class="container">
         <div class="row">
             <div class="inner-content">
-                <div class="product-list" data-aos="fade-up">
+                <div class="product-list" >
                     <div class="grid product-grid">
                         <div class="product-item">
                             <figure class="product-style">
@@ -646,12 +645,13 @@
                                 <div class="item-price">$ 40.00</div>
                             </figcaption>
                         </div>
-                    </div><!--grid-->
+                    </div>
                 </div>
-            </div><!--inner-content-->
+            </div>
         </div>
     </div>
 </section>
+  -->
 
 <section id="subscribe">
     <div class="container">
@@ -669,7 +669,7 @@
                     </div>
                     <div class="col-md-6">
 
-                        <div class="subscribe-content" data-aos="fade-up">
+                        <div class="subscribe-content" >
                             <p>Sed eu feugiat amet, libero ipsum enim pharetra hac dolor sit amet, consectetur. Elit
                                 adipiscing enim pharetra hac.</p>
                             <form id="form">
