--- a/frontend/haelya-front/src/app/shared/components/header/header.component.html
+++ b/frontend/haelya-front/src/app/shared/components/header/header.component.html
@@ -21,17 +21,32 @@
                     <div class="right-element">
 
 
-                        <div class="search-bar">
+                        <div class="search-bar for-buy">
                             <form role="search" method="get" class="search-box">
-                                <input class="search-input" type="search" placeholder="Rechercher…" />
+                                <input class="search-input for-buy" type="search" placeholder="Rechercher…" />
                                 <button type="submit" class="search-button">
                                     <i class="icon icon-search"></i>
                                 </button>
                             </form>
                         </div>
+                        @if (!authService.isConnected()) {
+                        <a routerLink="/login" class="user-account for-buy"><i class="icon icon-user"></i><span>Se
+                                connecter</span></a>
+                        <a routerLink="/register" class="user-account for-buy"><i
+                                class="icon icon-user"></i><span>S'inscrire</span></a>
+                        }
+                        @if (authService.isConnected()) {
+                        <div class="user-account user-greeting for-buy">
+                            Bonjour, <a routerLink="/profil"><span>prenom</span></a>
+                        </div>
+                        <a (click)="logout()" class="user-account logout">Déconnexion</a>
+                        }
 
-                        <a routerLink="/login" class="user-account for-buy"><i class="icon icon-user"></i><span>Se connecter</span></a>
-                        <a href="#" class="cart for-buy"><i class="icon icon-clipboard"></i><span>Cart:(0 $)</span></a>
+                        @if (authService.isAdmin()) {
+                        <a routerLink="/admin" class="user-account for-buy"><span>Dashboard Admin</span></a>
+                        }
+
+
 
 
                     </div><!--top-right-->
@@ -57,8 +72,8 @@
                     <nav id="navbar" class="position-relative">
                         <div class="main-menu stellarnav" [class.active]="isMenuOpen">
                             <ul class="menu-list">
-                                <li class="menu-item active"><a href="#home">Home</a></li>
-                                <li class="menu-item has-sub" (mouseenter)="showDropdown('pages')"
+                                <li class="menu-item active nav-link"><a href="#home">Home</a></li>
+                                <li class="menu-item has-sub nav-link" (mouseenter)="showDropdown('pages')"
                                     (mouseleave)="hideDropdown('pages')" [class.open]="isDropdownOpen === 'pages'">
                                     <a href="#pages">Pages</a>
 
@@ -73,6 +88,8 @@
                                 <li class="menu-item"><a href="#popular-books" class="nav-link">Popular</a></li>
                                 <li class="menu-item"><a href="#special-offer" class="nav-link">Offer</a></li>
                                 <li class="menu-item"><a href="#latest-blog" class="nav-link">Articles</a></li>
+                                <li class="menu-item"><a href="#" class="cart for-buy nav-link"><i
+                                            class="icon icon-clipboard"></i><span>Cart:(0 $)</span></a></li>
                             </ul>
                         </div>
                         <div class="hamburger" [class.active]="isMenuOpen" (click)="toggleMenu()">
