feat: amélioration formulaire de profil + correction affichage après update

--- a/frontend/haelya-front/src/app/shared/components/header/header.component.html
+++ b/frontend/haelya-front/src/app/shared/components/header/header.component.html
@@ -37,7 +37,7 @@
                         }
                         @if (authService.isConnected()) {
                         <div class="user-account user-greeting for-buy">
-                            Bonjour, <a routerLink="/profil"><span>{{authService.getFirstName()}}</span></a>
+                            Bonjour, <a routerLink="/dashboard"><span>{{authService.getFirstName()}}</span></a>
                         </div>
                         <a (click)="logout()" class="user-account logout">Déconnexion</a>
 
