--- a/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.html
+++ b/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.html
@@ -6,8 +6,24 @@
         <p><strong>N° de téléphone</strong> : {{user.phoneNumber || '-'}}</p>
         <p><strong>Date de naissance</strong> : {{ user.birthDate ? (user.birthDate | date: 'dd/MM/yyyy') : '-' }}</p>
         <button (click)="enableEdit()">Modifier</button>
+        <div class="delete-section">
+            <button class="btn-delete" (click)="confirmDelete = true">❌ Supprimer mon compte</button>
+        </div>
     </div>
     }
+
+    @if (confirmDelete) {
+  <div class="modal-backdrop">
+    <div class="modal">
+      <h3>Confirmer la suppression</h3>
+      <p>Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.</p>
+      <div class="modal-actions">
+        <button class="btn-cancel" (click)="confirmDelete = false">Annuler</button>
+        <button class="btn-confirm" (click)="deleteAccount()">Confirmer</button>
+      </div>
+    </div>
+  </div>
+}
 
     @if (isEditing) {
     <form [formGroup]="updateProfilForm" (ngSubmit)="onSubmit()" class="profil-form">
