--- a/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.scss
+++ b/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.scss
@@ -26,6 +26,7 @@
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -131,6 +132,95 @@
 
     &:hover {
       background-color: #b08972;
+    }
+  }
+}
+
+.delete-section {
+  margin-top: 2rem;
+  text-align: center;
+
+  .btn-delete {
+    background-color: #ff5c5c;
+    color: #fff;
+    border: none;
+    padding: 0.6rem 1.4rem;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: #e53935;
+    }
+  }
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); // semi-transparent noir
+  display: flex;
+  opacity: 1 !important;
+  visibility: visible !important;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+
+  .modal {
+    background-color: #fff; // fond clair
+    color: #333;
+    padding: 2rem;
+    border-radius: 6px;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+
+    h3 {
+      margin-bottom: 1rem;
+      font-size: 1.3rem;
+    }
+
+    p {
+      margin-bottom: 1.5rem;
+      font-size: 1rem;
+    }
+
+    .modal-actions {
+      display: flex;
+      justify-content: space-between;
+      gap: 1rem;
+
+      .btn-cancel,
+      .btn-confirm {
+        padding: 0.5rem 1.2rem;
+        border: none;
+        border-radius: 4px;
+        font-weight: 500;
+        cursor: pointer;
+      }
+
+      .btn-cancel {
+        background-color: #ddd;
+        color: #333;
+
+        &:hover {
+          background-color: #ccc;
+        }
+      }
+
+      .btn-confirm {
+        background-color: #e53935;
+        color: #fff;
+
+        &:hover {
+          background-color: #d32f2f;
+        }
+      }
     }
   }
 }
