--- a/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.html
+++ b/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.html
@@ -7,23 +7,11 @@
         <p><strong>Date de naissance</strong> : {{ user.birthDate ? (user.birthDate | date: 'dd/MM/yyyy') : '-' }}</p>
         <button (click)="enableEdit()">Modifier</button>
         <div class="delete-section">
-            <button class="btn-delete" (click)="confirmDelete = true">❌ Supprimer mon compte</button>
+            <button class="btn-delete" (click)="openModal()">❌ Supprimer mon compte</button>
         </div>
     </div>
     }
 
-    @if (confirmDelete) {
-  <div class="modal-backdrop">
-    <div class="modal">
-      <h3>Confirmer la suppression</h3>
-      <p>Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.</p>
-      <div class="modal-actions">
-        <button class="btn-cancel" (click)="confirmDelete = false">Annuler</button>
-        <button class="btn-confirm" (click)="deleteAccount()">Confirmer</button>
-      </div>
-    </div>
-  </div>
-}
 
     @if (isEditing) {
     <form [formGroup]="updateProfilForm" (ngSubmit)="onSubmit()" class="profil-form">
@@ -75,3 +63,12 @@
 
     }
 </div>
+
+<app-modal [visible]="isModalOpen" (closed)="isModalOpen = false">
+    <h3>Confirmer la suppression</h3>
+    <p>Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.</p>
+    <div class="modal-actions">
+        <button class="btn-confirm" (click)="deleteAccount()">Confirmer</button>
+        <button class="btn-cancel" (click)="isModalOpen = false">Annuler</button>
+    </div>
+</app-modal>
