--- a/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.scss
+++ b/frontend/haelya-front/src/app/pages/user/dashboard/profil/profil.component.scss
@@ -160,12 +160,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); // semi-transparent noir
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
-  opacity: 1 !important;
-  visibility: visible !important;
   justify-content: center;
   align-items: center;
   z-index: 9999;
@@ -224,3 +222,6 @@
     }
   }
 }
+
+
+ 
