--- a/frontend/haelya-front/src/app/shared/components/header/header.component.html
+++ b/frontend/haelya-front/src/app/shared/components/header/header.component.html
@@ -74,7 +74,7 @@
                     <nav id="navbar" class="position-relative">
                         <div class="main-menu stellarnav" [class.active]="isMenuOpen">
                             <ul class="menu-list">
-                                <li class="menu-item active nav-link"><a href="#home">Home</a></li>
+                                <li class="menu-item active nav-link"><a routerLink="">Home</a></li>
                                 <li class="menu-item has-sub nav-link" (mouseenter)="showDropdown('pages')"
                                     (mouseleave)="hideDropdown('pages')" [class.open]="isDropdownOpen === 'pages'">
                                     <a href="#pages">Pages</a>
@@ -86,10 +86,10 @@
                                     </ul>
 
                                 </li>
+                                <li class="menu-item"><a routerLink="/catalogue" class="nav-link">Catalogue</a></li>
                                 <li class="menu-item"><a href="#featured-books" class="nav-link">Featured</a></li>
                                 <li class="menu-item"><a href="#popular-books" class="nav-link">Popular</a></li>
                                 <li class="menu-item"><a href="#special-offer" class="nav-link">Offer</a></li>
-                                <li class="menu-item"><a href="#latest-blog" class="nav-link">Articles</a></li>
                                 <li class="menu-item"><a href="#" class="cart for-buy nav-link"><i
                                             class="icon icon-clipboard"></i><span>Cart:(0 $)</span></a></li>
                             </ul>
