modif mineur sur user-detail, adaptation de quantity selector et tabs, finalisation de productcard et mise en place de product-detail.

--- a/frontend/haelya-front/src/app/shared/components/quantity-selector/quantity-selector.component.html
+++ b/frontend/haelya-front/src/app/shared/components/quantity-selector/quantity-selector.component.html
@@ -1,5 +1,5 @@
 <div class="quantity-selector">
-  <button (click)="decrement()" class="qty-btn">−</button>
-  <input type="number" [value]="quantity" (input)="onInput($event)" />
-  <button (click)="increment()" class="qty-btn">+</button>
+  <button (click)="decrement()" class="qty-btn" [disabled]="isDisabled">−</button>
+  <input type="number" class="qty-input" [value]="value" (input)="onInput($event)" [disabled]="isDisabled" />
+  <button (click)="increment()" class="qty-btn" [disabled]="isDisabled">+</button>
 </div>
