--- a/frontend/haelya-front/src/app/pages/catalogue/productcard/productcard.component.html
+++ b/frontend/haelya-front/src/app/pages/catalogue/productcard/productcard.component.html
@@ -1,10 +1,13 @@
 <div class="card">
-  <div class="image-container">
+  <a class="product-link" [routerLink]="['/produit', product.slug]">
     <img [src]="product.imageUrl" [alt]="product.name" />
-  </div>
+    <div class="card-body">
+      <h5 class="product-name">{{ product.name }}</h5>
+      <p class="product-price">{{ product.price | currency: 'EUR' }}</p>
+    </div>
+  </a>
 
-  <p class="name">{{ product.name }}</p>
-  <p class="price">{{ product.price | currency:'EUR':'symbol':'1.2-2' }}</p>
-
-  <div class="overlay">Ajouter au panier</div>
+  <button class="add-to-cart-btn" (click)="addToCart($event)">
+    Ajouter au panier
+  </button>
 </div>
