feat debut travail admin-catalogue

--- a/frontend/haelya-front/src/app/layout/admin-layout/admin-layout.component.html
+++ b/frontend/haelya-front/src/app/layout/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
       <ul>
         <li><a routerLink="/admin" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a></li>
         <li><a routerLink="/admin/utilisateurs" routerLinkActive="active">Utilisateurs</a></li>
-        <li><a routerLink="/admin/produits" routerLinkActive="active">Produits</a></li>
+        <li><a routerLink="/admin/catalogue" routerLinkActive="active">Catalogue des Produits</a></li>
         <li><a routerLink="/admin/commandes" routerLinkActive="active">Commandes</a></li>
         <li><a routerLink="" routerLinkActive="active">Retour au site</a></li>
       </ul>
